<resources>
    <string name="app_name">Aviation Hong Kong</string>
    <string name="title_home">Overview</string>
    <string name="title_vhsk">VHSK</string>
    <string name="title_metartaf">METAR/TAF</string>
    <string name="title_radar">Radar/Cam</string>
    <string name="title_localaviation">Local</string>
    <string name="downloading_from_hko">Downloading from HKO…</string>
    <string name="downloading_radar_image_sequence">Downloading radar image sequence</string>
    <string name="companion_app_for_local_pilots">companion app for local pilots</string>
    <string name="disclaimer">All weather charts and data are owned by and downloaded from Hong Kong Observatory</string>
    <string name="open_source_project_site">Open source project site:</string>
    <string name="project_url">https://github.com/sonny-chen/aviation-weather-android</string>
    <string name="about">About</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="qnh">QNH</string>
    <string name="cloud">Cloud</string>
    <string name="weather">Weather</string>
    <string name="visibility">Visibility</string>
    <string name="wind">Wind</string>
    <string name="current_weather">Current Weather</string>
    <string name="local_forecast">Local Forecast</string>
    <string name="extended_forecast">Extended Forecast</string>
    <string name="weather_warnings">Weather Warnings</string>
    <string name="general_situation">General Situation</string>
    <string name="view_bookings">View Bookings</string>
    <string name="vhsk">VHSK</string>
    <string name="image">Image</string>
    <string name="crosswind">x/wind</string>
    <string name="vhsk_colon">VHSK:</string>
    <string name="hkac_shared_pdf_secret">HKAC shared PDF password:</string>
    <string name="error">Error</string>
    <string name="pdf_password_is_required">PDF password is required.</string>
    <string name="go">Go</string>
    <string name="cancel">Cancel</string>
    <string name="title_booking_helicopter">Helicopter Booking</string>
    <string name="title_booking_fixedwing">Fixed Wing Booking</string>
    <string name="password_invalid_prompt">The shared PDF password you entered is invalid. Please try again.</string>
    <string name="password_incorrect">Password Incorrect</string>
    <string name="close">Close</string>
    <string name="data_accuracy_disclaimer">Data in this app is for reference only. You must ensure your information is correct before flying.</string>
    <string name="contact_author">Contact author:</string>
</resources>
