<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sonnychen.aviationhk.AboutActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="39dp"
        android:text="@string/open_source_project_site"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="113dp"
        android:layout_below="@+id/textView5"
        android:layout_alignStart="@+id/textView5"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="2dp"
        android:text="@string/companion_app_for_local_pilots"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="113dp"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="70dp"
        android:text="@string/app_name"
        style="@style/TextAppearance.AppCompat.Headline"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="113dp"/>

    <TextView
        android:id="@+id/gitHubLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/project_url"
        android:textColor="#0000FF"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="113dp"
        android:layout_below="@+id/textView6"
        android:layout_alignStart="@+id/textView6"
        android:layout_marginTop="2dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disclaimer"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="113dp"
        android:layout_marginBottom="74dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/gitHubLink"/>
</RelativeLayout>
